# specced

./: .gitignore  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  authoring-skills.md  cli-reference.md  concepts.md  faq.md  getting-started.md  index.md  interview.md  presets.md  proof-loop.md  skills.md
docs/proposals/: ci-gate-and-signal.md
infra/terraform/github/: .gitignore  README.md  branch_protection.tf  outputs.tf  providers.tf  repository.tf  terraform.tfvars.example  variables.tf  versions.tf
plugin/.claude-plugin/: plugin.json
plugin/commands/: add-skill.md  doctor.md  init.md
plugin/skills/specced-bootstrap/: SKILL.md
src/specced/: __init__.py  _paths.py  cli.py  detect.py  scaffold.py  stats.py
src/specced/templates/ci/: github-gate.yml.tmpl
src/specced/templates/code-review/: README.md  _template.md
src/specced/templates/mcp/: servers.json
src/specced/templates/presets/: cpp.json  go.json  java-spring.json  node-express.json  node-next.json  node-react.json  node-svelte.json  node.json  python-django.json  python-fastapi.json  python.json  ruby-rails.json  rust.json  tauri.json
src/specced/templates/project/: CONSTITUTION.md.tmpl  Makefile.tmpl  mcp.json.tmpl  settings.json.tmpl
src/specced/templates/rules/: README.md  _template.md
src/specced/templates/skills/add-integration/: SKILL.md
tests/: conftest.py  test_adopt.py  test_ci.py  test_detect.py  test_presets_mcp.py  test_scaffold.py  test_stats.py
(+31 files in other folders)
